force-app/main/default/objects/PMT_Setting__mdt/PMT_Setting__mdt.object-meta.xml
<CustomObject>
    <label>PMT Setting</label>
    <pluralLabel>PMT Settings</pluralLabel>
</CustomObject>