force-app/main/default/objects/PMT_Setting__mdt/fields/Resource_Planning_Years_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>Resource_Planning_Years_in_Advance__c</fullName>
    <defaultValue>2</defaultValue>
    <description>The rolling number of years for which the availability is created by the scheduler in advance, so that resource planning can be done in advance for those many number of years</description>
    <inlineHelpText>The rolling number of years for which the availability is created by the scheduler in advance, so that resource planning can be done in advance for those many number of years</inlineHelpText>
    <label>Resource Planning # Years in Advance</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>