force-app/main/default/objects/PMT_Setting__mdt/fields/Start_Month_of_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Month_of_Fiscal_Year__c</fullName>
    <defaultValue>2</defaultValue>
    <description>This indicates the start of the fiscal year. For example, if value is 2 which means year starts from Feb, 3 for Mar, and so on</description>
    <inlineHelpText>This indicates the start of the fiscal year. For example, if value is 2 which means year starts from Feb, 3 for Mar, and so on</inlineHelpText>
    <label>Start Month of Fiscal Year</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>