force-app/main/default/objects/PMT_Setting__mdt/validationRules/Start_Month_between_1_and_12.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Month_between_1_and_12</fullName>
    <active>true</active>
    <description>Start month for fiscal year setting should be in between 1 and 12</description>
    <errorConditionFormula>Start_Month_of_Fiscal_Year__c &lt; 1 || Start_Month_of_Fiscal_Year__c &gt; 12</errorConditionFormula>
    <errorDisplayField>Start_Month_of_Fiscal_Year__c</errorDisplayField>
    <errorMessage>Start month for fiscal year setting should be in between 1 and 12</errorMessage>
</ValidationRule>